syntax = "proto3";

option csharp_namespace = "AElf.Contracts.SideChain";

import "common.proto";

enum SideChainStatus
{
    Undefined = 0;
    Pending = 1;
    Active = 2;
    Terminated = 3;
}

message SideChainInfo
{
    Hash Owner = 1;
    uint64 SerialNumer = 2;
    Hash ChainId = 3;
    SideChainStatus Status = 4;
    Hash LockedAddress = 5;
    uint64 LockedToken = 6;
    uint64 CreationHeight =7;
}
